--- a/src/components/image-content/image-content.css
+++ b/src/components/image-content/image-content.css
@@ -2,13 +2,15 @@
 	position: relative;
 	height: 150px;
 	width: 250px;
-	border: 1px solid aquamarine;
+	border: 3px solid aquamarine;
 	overflow: hidden;
 }
 
 .content-image{
 	position: absolute;
-
-	height: auto;
-	width: inherit;
+	height: inherit;
+	width: auto;
+	left: 50%;
+	transform: translateX(-50%);
+	
 }
