changed text decoration for <a> and hover color

--- a/src/styles/typography.css
+++ b/src/styles/typography.css
@@ -13,4 +13,9 @@ a {
 	font-family: 'Open Sans';
 	color: #e1524b;
 	line-height: 24.7px;
+	text-decoration: underline;
+}
+
+a:hover {
+	color: #bc4742;
 }
