--- a/src/components/tag-item/tag-item.css
+++ b/src/components/tag-item/tag-item.css
@@ -1,33 +1,34 @@
 .mainmenu .itemmenu {
-    margin-right: 20px;
-		font-size: 14px;
-		line-height: 34px;
-		background: #98a3a3;
-		border-bottom: 3px solid #7f8c8c;
-		border-radius: 4px;
-		display: inline-block;
-}
-.mainmenu .tagitem {
-	  display: inline-block;
-}
-.mainmenu a{
-		list-style: none;
-		text-decoration: none;
-		color: #ffffff;
-		padding-left: 10px;
-		padding-right: 10px;
-		padding-top: 9px;
-		padding-bottom: 9px;
-		
+	margin-right: 20px;
+	font-size: 14px;
+	line-height: 34px;
+	background: #98a3a3;
+	border-bottom: 3px solid #7f8c8c;
+	border-radius: 4px;
+	display: inline-block;
 }
 
-.mainmenu a:hover{
-		background-color: #e8645a;
-		border-bottom: 3px solid #e2534b;
-		border-radius: 4px;
+.mainmenu .tagitem {
+	display: inline-block;
+}
+
+.mainmenu a {
+	list-style: none;
+	text-decoration: none;
+	color: #fff;
+	padding-left: 10px;
+	padding-right: 10px;
+	padding-top: 9px;
+	padding-bottom: 9px;
+}
+
+.mainmenu a:hover {
+	background-color: #e8645a;
+	border-bottom: 3px solid #e2534b;
+	border-radius: 4px;
 }
 
 .mainmenu .itemmenu:nth-child(5) {
-	  background-color: #62a29e;
-	  border-bottom: 3px solid #528b86;
+	background-color: #62a29e;
+	border-bottom: 3px solid #528b86;
 }
