--- a/src/styles/typography.css
+++ b/src/styles/typography.css
@@ -19,3 +19,10 @@ a {
 a:hover {
 	color: #bc4742;
 }
+
+p {
+	font-size: 11px;
+	font-family: 'Open Sans';
+	color: #7f8c8c;
+	line-height: 1.2em;
+}
