--- a/src/components/button-control/button-control.css
+++ b/src/components/button-control/button-control.css
@@ -1,7 +1,20 @@
 .button-control {
-	height: 30px;
-	background: green;
-	width: auto;
+	background: #76caca;
 	color: white;
+	height: 50px;
+	width: 200px;
 	padding: 0 25px;
-} 
+	border-radius: 5px;
+	border: none;
+	box-shadow: 0 4px #62bdbd;
+}
+
+.button-control:hover {
+	background: #e8645a;
+	box-shadow: 0 4px #e2534b;
+}
+
+.button-control:active {
+	box-shadow: 0 3px #e2534b;
+	transform: translateY(3px);
+}
