--- a/src/components/search-box/search-box.css
+++ b/src/components/search-box/search-box.css
@@ -8,15 +8,11 @@
 
 .search-box-button{
 	position: absolute;
-	background: url(search-box-button-redbg.png),
-				url(search-box-button-whitebg.png),
-				url(search-box-button-lens.png);
-	background-repeat: no-repeat, no-repeat, no-repeat;
-	background-position: 50% 50%;
+	
+	background: url(search-box-button) 50% 50% no-repeat;
 	height: 34px;
 	width: 34px;
 	right: 0;
-	text-align: center;
 	top: 0;
 }
 
