--- a/src/components/tag-footer/tag-footer.css
+++ b/src/components/tag-footer/tag-footer.css
@@ -2,7 +2,7 @@
       font-family: sans-serif;
       position: absolute;
       bottom: 0;
-      width: 1200px;
+      width: 100%;
       height: 350px;
       background: url(./footer-border.png) repeat-x;
       background-color: #76c7c0; 
@@ -12,7 +12,7 @@
 	  display: flex;
       position: absolute;
       top: 48px;
-      left: 5px;
+      left: 75px;
 }
 
 
@@ -139,7 +139,7 @@
 
 .tag-footer .tag-bottom-line .ModusVersus {
       position: absolute;
-      left: 5px;
+      left: 75px;
       top: 10px;
       font-size: 12px;
       color: #ffffff;
