--- a/src/components/main-menu/main-menu.css
+++ b/src/components/main-menu/main-menu.css
@@ -3,6 +3,8 @@
     /*font-family: ;*/
 }
 
+
+/*
 .main-menu {}
 
 .main-menu {}
@@ -21,4 +23,4 @@
     box-shadow: 0 4px #e2534b;
 }
 
-.portfolio1:active {}
+\*/
