--- a/src/components/tag-footer/tag-footer.css
+++ b/src/components/tag-footer/tag-footer.css
@@ -1,8 +1,6 @@
 .tag-footer {
-      font-family: sans-serif;
-      position: absolute;
       bottom: 0;
-      width: 1170px;
+      width: 100%;
       height: 350px;
 	  background: url(./footer-border.png) repeat-x;
 	  background-color: #76c7c0;
@@ -10,9 +8,9 @@
 
 .tag-footer .tag-content {
 	  display: flex;
-      position: absolute;
-      top: 48px;
-      left: 5px;
+      justify-content: center;
+	  flex-direction: row;
+	  align-items: center;
 }
 
 
@@ -20,7 +18,8 @@
 .tag-footer .tag-coll {
       height: 250px;
       width: 370px;
-	  padding-right: 27px;
+	  padding-right: 30px;
+	  margin-top: 50px;
 }
 
 .tag-footer .tag-content-coll1 {
@@ -72,11 +71,13 @@
 }
 .tag-footer .tag-content-coll2 .company1 {
       font-size: 13px;
-      padding-top: 50px;
-      margin-left: -60px;
+      padding-top: 37px;
+      margin-left: -105px;
+	  list-style-type: none;
 }
 
 .tag-footer .tag-content-coll2 .community {
+	  margin-left: 20px;
       font-size: 20px;
       margin-top: -1px;
       padding-left: 60px;
@@ -85,22 +86,24 @@
 
 .tag-footer .tag-content-coll2 .community1 {
       font-size: 13px;
-      margin-left: -75px;
-      padding-top: 50px;
+      margin-left: -125px;
+      padding-top: 37px;
+	  list-style-type: none;
 }
 
 .tag-footer .tag-content-coll2 .companymenu {
-      word-spacing: 10px; 
+      word-spacing: 7px; 
       
 }
 
 .tag-footer .tag-content-coll2 .communitymenu {
-      word-spacing: 10px;
+      word-spacing: 7px;
 }
 
 .tag-footer .tag-content-coll3 {
       color: #ffffff;
       background: url(./fromtheBLOG.png) no-repeat;
+	  
 }
 
 .tag-footer .tag-content-coll3 .image1 img{
@@ -108,7 +111,7 @@
       height: 70px;
       width: 70px;
       overflow: hidden;
-      margin-right: 10px;
+      margin-right: 15px;
       
 }
 
@@ -126,53 +129,56 @@
       height: 70px;
       width: 70px;
       overflow: hidden;
-      margin-right: 10px;
+      margin-right: 15px;
       
 }
 
 .tag-footer .tag-bottom-line {
       width: 100%;
-      height: 50px;  
-      position: absolute;
-      bottom: 0;
-      background-color: #6ab3ac;
+	  height: 50px; 
+	  background-color: #6ab3ac;
+	  padding-top: 14px;
+	  margin-top: 50px;
+}
+
+.tag-footer .tagpicture {
+	  display: flex;
+	  justify-content: center;
+	  flex-direction: row;
+	  align-items: center;
 }
 
 .tag-footer .tag-bottom-line .ModusVersus {
-      position: absolute;
-      left: 5px;
-      top: 10px;
-      font-size: 12px;
+	  margin-left: -25px;
+	  font-size: 12px;
       color: #ffffff;
+	  margin-right: 903px;
 }
 .tag-footer .tag-bottom-line .logopicture{
-      display: inline-block;
+      display: flex;
+	  
 }
 .tag-footer .tag-bottom-line .facebook {
       width: 21px;
       height: 21px;
       overflow: hidden;
-      position: absolute;
-      right: 144px; 
 }
 .tag-footer .tag-bottom-line .google {
       width: 21px;
       height: 21px;
       overflow: hidden;
-      position: absolute;
-      right: 96px; 
+	  margin-left: 27px;
 }
 .tag-footer .tag-bottom-line .twetter {
       width: 21px;
       height: 21px;
       overflow: hidden;
-      position: absolute;
-      right: 48px; 
+	  margin-left: 27px;
 }
 .tag-footer .tag-bottom-line .rss {
       width: 21px;
       height: 21px;
       overflow: hidden;
-      position: absolute;
-      right: 0px; 
+	  margin-left: 27px;
+      
 }
