corrected tag-item

--- a/src/components/tag-footer/tag-footer.css
+++ b/src/components/tag-footer/tag-footer.css
@@ -23,7 +23,7 @@
 }
 
 .tag-footer .tag-content-coll1 {
-      background: url(./modus.png) no-repeat;
+      background: url(./page-logo/modus.png) no-repeat;
       
 }
 
