--- a/src/components/tag-footer/tag-footer.css
+++ b/src/components/tag-footer/tag-footer.css
@@ -100,10 +100,12 @@
       word-spacing: 7px;
 }
 
-.tag-footer .tag-content-coll3 {
-      color: #ffffff;
-      background: url(./fromtheBLOG.png) no-repeat;
-	  
+
+
+.tag-footer .blog {
+	  color: #ffffff;
+	  font-size: 20px;
+	  padding-bottom: 24px;
 }
 
 .tag-footer .tag-content-coll3 .image1 img{
@@ -116,12 +118,18 @@
 }
 
 .tag-footer .tag-content-coll3 .imageblog {
-      margin-top: 45px; 
+      margin-top: 5px; 
 }
 
 .tag-footer .tag-content-coll3 .text {
       margin-top: 35px; 
+	  color: #ffffff;
 }
+
+.tag-footer .tag-content-coll3 .text1 {
+	  color: #ffffff;
+}
+
 
 
 .tag-footer .tag-content-coll3 .image2 img{
