--- a/src/components/tag-footer/tag-footer.css
+++ b/src/components/tag-footer/tag-footer.css
@@ -82,6 +82,7 @@
       margin-top: -1px;
       padding-left: 60px;
       color: #777777;
+	  margin-left: 14px;
 }
 
 .tag-footer .tag-content-coll2 .community1 {
