--- a/src/components/pagination-menu/pagination-menu.css
+++ b/src/components/pagination-menu/pagination-menu.css
@@ -1,14 +1,20 @@
-.pagination {
+.pagination{
   width: 570px;
   /*display: inline-block;*/
   padding: 10px;
+  white-space: nowrap;
 
 }
 .pagination a, 
-.pagination span {
+.pagination span{
+  box-sizing: border-box;
   display: inline-block;
+  text-align: center;
+  vertical-align: middle;
   background-color: #8c9898;
   border-radius: 5px;
+  line-height: 12px;
+  /*border-bottom: 3px solid #7f8c8c;*/
   color:#f0f1f1;
   padding: 14px 18px;
   text-decoration: none;
@@ -17,6 +23,21 @@
   
   }
 
-.pagination a:active{
+.pagination .active{
   background-color: #649792;
+  /*border-bottom: 3px solid #528b86;*/
+   
+}
+.pagination :hover{
+    background-color: #e5655d;
+    /*border-bottom: 3px solid #e2534b*/
+}
+.pagination .prev{
+margin-right: 30px;
+
+}
+.pagination .next{
+margin-left: 30px;
+}
+
 }
