Small, large, medium tiles

--- a/src/components/tag-footer/tag-footer.css
+++ b/src/components/tag-footer/tag-footer.css
@@ -22,7 +22,7 @@
 }
 
 .tag-footer .tag-content-coll1 {
-      background: url(./page-logo/modus.png) no-repeat;
+      background: url(/modus.png) no-repeat;
       width: 400px;
 }
 
