--- a/src/components/main-menu/main-menu.css
+++ b/src/components/main-menu/main-menu.css
@@ -1,11 +1,41 @@
-.main-menu {
-    font-size: 13px;
-    /*font-family: ;*/
+/*.main-menu {
+    font-size: 14px;
+    box-sizing: border-box;
+    position: absolute;
+    right: 250px;
+    top: 0px;
+    border-radius: 5px;
+    border: 0px;
+    background-color: blue;
+    text-align: center;
+}*/
+
+nav a {
+    display: inline-block;
+    padding: 18px 30px;
+    color: #ffffff !important;
+    font-weight: bold;
+    font-size: 14px;
+    text-decoration: none !important;
+    right: 250px;
+    line-height: 1;
+    text-transform: uppercase;
+    background-color: transparent;
+    -webkit-transition: background-color 0.25s;
+    -moz-transition: background-color 0.25s;
+    transition: background-color 0.25s;
+}
+
+nav a:first-child {
+    border-radius: 2px 0 0 2px;
+}
+
+nav a:last-child {
+    border-radius: 0 2px 2px 0;
 }
 
 
-/*
-.main-menu {}
+/*.main-menu {}
 
 .main-menu {}
 
@@ -21,6 +51,4 @@
 .main-menu:active {
     background: #e8645a;
     box-shadow: 0 4px #e2534b;
-}
-
-\*/
+}*/
