--- a/src/components/page-header/page-header.css
+++ b/src/components/page-header/page-header.css
@@ -1,2 +1,19 @@
 .page-header {
+	top:0;
+	background: url(./bg-header.jpg) repeat-x;
+	background-color: #76c7c0;
+	height: 80px;
+	width: 100%;
+	position: relative;
+}
+
+.header-logo {
+	position: absolute;
+	top: 25px;
+	left: 0;
+}
+.header-menu {
+	position: absolute;
+	top: 25px;
+	right: 70px; 
 }
