--- a/src/components/main-menu/main-menu.css
+++ b/src/components/main-menu/main-menu.css
@@ -1,28 +1,54 @@
-.main-menu {
-    display: inline-block;
-    margin: 60px auto 45px;
-    font-family: 'Open Sans Semibold', sans-serif;
-}
-
-.main-menu a {
-    display: inline-block;
-    padding: 18px 30px;
-    color: #fff !important;
-    font-weight: bold;
-    font-size: 13px;
-    text-decoration: none !important;
-    line-height: 1;
-    text-transform: uppercase;
-    background-color: transparent;
-    -webkit-transition: background-color 0.25s;
-    -moz-transition: background-color 0.25s;
-    transition: background-color 0.25s;
-}
-
-.main-menu a:first-child {
-    border-radius: 2px 0 0 2px;
-}
-
-.main-menu a:last-child {
-    border-radius: 0 2px 2px 0;
-}
+    .main-menu {
+        display: inline-block;
+        position: absolute;
+        right: 237px;
+        top: 4px;
+        left: 500px;
+        border-radius: 5px;
+        font-family: 'Open Sans Semibold', sans-serif;
+    }
+    
+    .main-menu a {
+        display: inline-block;
+        padding: 18px 30px;
+        color: #fff !important;
+        font-weight: bold;
+        font-size: 13px;
+        text-decoration: none !important;
+        line-height: 1;
+        text-transform: uppercase;
+        background-color: transparent;
+        -webkit-transition: background-color 0.25s;
+        -moz-transition: background-color 0.25s;
+        transition: background-color 0.25s;
+    }
+    
+    .main-menu a:visited {
+        outline: none;
+        color: #389dc1;
+    }
+    
+    .main-menu a:hover {
+        text-decoration: none;
+    }
+    
+    .main-menu .current:hover {
+        background: #62a29e;
+        box-shadow: 0 4px #528b86;
+        border-radius: 5px;
+    }
+    
+    .main-menu .current:active {
+        background: #e8645a;
+        box-shadow: 0 3px #e2534b;
+        transform: translateY(3px);
+        border-radius: 5px;
+    }
+    
+    .main-menu .main-menu a:first-child {
+        border-radius: 2px 0 0 2px;
+    }
+    
+    .main-menu a:last-child {
+        border-radius: 0 2px 2px 0;
+    }
