add new image to header

--- a/src/components/page-header/page-header.css
+++ b/src/components/page-header/page-header.css
@@ -2,7 +2,7 @@
 	height: 80px;
 	width: 100%;
 	position: relative;
-	background-image: url(./bg-header.jpg);
+	background-image: url(./index.png);
 	background-repeat: repeat-x;
 	background-color: #76c7c0;
 }
