--- a/src/components/page-header/page-header.css
+++ b/src/components/page-header/page-header.css
@@ -10,5 +10,11 @@
 .header-logo {
 	position: absolute;
 	top: 25px;
-	left: 0;
+	left: 100px;
 }
+
+/*.search-header {
+	position: absolute;
+	top: 25px;
+	right: 100px;
+}*/
