--- a/src/components/page-header/page-header.css
+++ b/src/components/page-header/page-header.css
@@ -2,7 +2,7 @@
 	height: 80px;
 	width: 100%;
 	position: relative;
-	background-image: url(./index.png);
+	background-image: url(./bg-header.png);
 	background-repeat: repeat-x;
 	background-color: #76c7c0;
 }
@@ -13,8 +13,8 @@
 	left: 100px;
 }
 
-/*.search-header {
+.search-header {
 	position: absolute;
 	top: 25px;
-	right: 100px;
-}*/
+	left: 1070px;
+}
