--- a/src/components/page-header/page-header.css
+++ b/src/components/page-header/page-header.css
@@ -13,7 +13,13 @@
 	left: 100px;
 }
 
-.search-header {
+.header-menu {
+	position: absolute;
+	top: 25px;
+	left: 564px;
+}
+
+.header-search {
 	position: absolute;
 	top: 25px;
 	left: 1070px;
