--- a/src/components/page-header/page-header.css
+++ b/src/components/page-header/page-header.css
@@ -2,7 +2,7 @@
 	height: 80px;
 	width: 100%;
 	position: relative;
-	background-image: url(./bg-header.jpg);
+	background-image: url(./bg-header.png);
 	background-repeat: repeat-x;
 	background-color: #76c7c0;
 }
@@ -10,5 +10,17 @@
 .header-logo {
 	position: absolute;
 	top: 25px;
-	left: 0;
+	left: 100px;
+}
+
+.header-menu {
+	position: absolute;
+	top: 25px;
+	left: 564px;
+}
+
+.header-search {
+	position: absolute;
+	top: 25px;
+	left: 1070px;
 }
