--- a/src/components/tabs/tabs.css
+++ b/src/components/tabs/tabs.css
@@ -3,7 +3,7 @@
 	margin: 150px auto;
 }
 
-label {
+.label-tab {
 	cursor: pointer;
 	display: inline-block;
 	padding: 10px 40px;
@@ -12,32 +12,32 @@ label {
 	font-size: 20px;
 }
 
-input {
+.tab-input {
 	display: none;
 }
 
-input:checked + label {
+.tab-input:checked + .label-tab {
 	background-color: lightcoral;
 	color: #fff;
 }
 
-input [id="tab-1"]:checked ~ .content .tab-1 {
+.tab-input [id="tab-1"]:checked ~ .content-tab .tab-1 {
 	display: block;
 }
 
-input [id="tab-2"]:checked ~ .content .tab-2 {
+.tab-input [id="tab-2"]:checked ~ .content-tab .tab-2 {
 	display: block;
 }
 
-input [id="tab-3"]:checked ~ .content .tab-3 {
+.tab-input [id="tab-3"]:checked ~ .content-tab .tab-3 {
 	display: block;
 }
 
-.content {
+.content-tab {
 	position: relative;
 }
 
-.content article {
+.content-tab .tab-1, .tab-2, .tab-3 {
 	position: absolute;
 	top: 0;
 	left: 0;
