--- a/src/components/tile-medium/tile-medium.css
+++ b/src/components/tile-medium/tile-medium.css
@@ -5,9 +5,9 @@
     width: 370px;
     height: 270px;
     border-radius: 6px;
-    margin: 10px;
-    text-align: center;
+    margin: 0 30px 35px 0; 
 	border: 2px solid lightcoral;
+    text-align: center;
 	border-bottom: solid 3px #e5e6e6;
 }
 
@@ -17,16 +17,36 @@
     transition-duration: 0.3s;
 }
 
-.tile-medium span{
-	font-family: 'Open Sans',sans-serif;
-	color: white;
-	font-size: 16px;
-	font-weight: 700;
-	position: relative;
-	top: 210px;
-	display: none;
+.tile-medium-hover{
+	margin-top: 30%;
+    display: none;
+	width: 100%;
 }
 
-.tile-medium:hover span{
+.tile-medium:hover .tile-medium-hover{
+	text-align: center;
 	display: inline-block;
+}
+
+.tile-medium-hover button{
+	margin: 5px;
+	border: none;
+    border-radius: 5px;
+    height: 40px;
+    width: 40px;
+	background: url(./images/eye.png);
+}
+
+.tile-medium-hover span{
+	display: block;
+    text-align: center;
+	font-family: 'Open Sans', sans-serif;
+	font-size: 16px;
+    color: white;
+    position: relative;
+    top: 60px;
+}
+
+.tile-medium:nth-child(3n+3){
+	margin-right: 0;
 }
