--- a/src/components/tile-small/tile-small.css
+++ b/src/components/tile-small/tile-small.css
@@ -5,7 +5,8 @@
     width: 270px;
     height: 270px;
     border-radius: 6px;
-    margin: 10px;
+    margin: 0 30px 35px 0; 
+	border: 2px solid lightcoral;
     text-align: center;
 	border-bottom: solid 3px #e5e6e6;
 }
@@ -44,4 +45,8 @@
     color: white;
     position: relative;
     top: 60px;
+}
+
+.tile-small:nth-child(4n+4){
+	margin-right: 0;
 }
