--- a/src/components/tiles-grid/tiles-grid.css
+++ b/src/components/tiles-grid/tiles-grid.css
@@ -1,7 +1,6 @@
 .tiles-grid{
     padding: 0;
-    margin: 0 100px;
-    width: 1190px;
+    margin: 35px 0;
+    width: 1250px;
     display: inline-block;
-
 }
