Some changes in tiles

--- a/src/components/tile-medium/tile-medium.css
+++ b/src/components/tile-medium/tile-medium.css
@@ -5,8 +5,7 @@
     width: 370px;
     height: 270px;
     border-radius: 6px;
-    margin: 0 30px 35px 0; 
-	border: 2px solid lightcoral;
+    margin: 0 27px 37px 0; 
     text-align: center;
 	border-bottom: solid 3px #e5e6e6;
 }
@@ -18,7 +17,7 @@
 }
 
 .tile-medium-hover{
-	margin-top: 30%;
+	margin-top: 110px;
     display: none;
 	width: 100%;
 }
@@ -47,6 +46,6 @@
     top: 60px;
 }
 
-.tile-medium:nth-child(3n+3){
+/*.tile-medium:nth-child(3n+3){
 	margin-right: 0;
-}
+}*/
