--- a/src/components/tile-small/tile-small.css
+++ b/src/components/tile-small/tile-small.css
@@ -5,10 +5,10 @@
     width: 270px;
     height: 270px;
     border-radius: 6px;
-    margin: 0 30px 35px 0; 
-	border: 2px solid lightcoral;
+    margin: 0 27px 37px 0; 
     text-align: center;
 	border-bottom: solid 3px #e5e6e6;
+	font-size: 0;
 }
 
 .tile-small:hover {
@@ -18,7 +18,7 @@
 }
 
 .tile-small-hover{
-	margin-top: 40%;
+	margin-top: 110px;
     display: none;
 	width: 100%;
 }
@@ -44,9 +44,9 @@
 	font-size: 16px;
     color: white;
     position: relative;
-    top: 60px;
+    top: 30px;
 }
 
-.tile-small:nth-child(4n+4){
+/*.tile-small:nth-child(4n+4){
 	margin-right: 0;
-}
+}*/
