--- a/src/components/tile-large/tile-large.css
+++ b/src/components/tile-large/tile-large.css
@@ -1,32 +1,51 @@
-.tile-large{
+.tile-medium{
 	background-color: #f8f8f8;
     display: inline-block;
     vertical-align: top;
     width: 570px;
     height: 270px;
     border-radius: 6px;
-    margin: 10px;
+    margin: 0 27px 37px 0; 
     text-align: center;
-	border: 2px solid lightcoral;
 	border-bottom: solid 3px #e5e6e6;
 }
 
-.tile-large:hover {
+.tile-medium:hover {
     display: inline-block;
     background-color: #83ccc5;
     transition-duration: 0.3s;
 }
 
-.tile-large span{
-	font-family: 'Open Sans',sans-serif;
-	color: white;
-	font-size: 16px;
-	font-weight: 700;
-	position: relative;
-	top: 210px;
-	display: none;
+.tile-medium-hover{
+	margin-top: 110px;
+    display: none;
+	width: 100%;
 }
 
-.tile-large:hover span{
+.tile-medium:hover .tile-medium-hover{
+	text-align: center;
 	display: inline-block;
 }
+
+.tile-medium-hover button{
+	margin: 5px;
+	border: none;
+    border-radius: 5px;
+    height: 40px;
+    width: 40px;
+	background: url(./images/eye.png);
+}
+
+.tile-medium-hover span{
+	display: block;
+    text-align: center;
+	font-family: 'Open Sans', sans-serif;
+	font-size: 16px;
+    color: white;
+    position: relative;
+    top: 60px;
+}
+
+/*.tile-medium:nth-child(2n+2){
+	margin-right: 0;
+}*/
