--- a/src/components/tile-large/tile-large.css
+++ b/src/components/tile-large/tile-large.css
@@ -1,4 +1,4 @@
-.tile-medium{
+.tile-large{
 	background-color: #f8f8f8;
     display: inline-block;
     vertical-align: top;
@@ -10,24 +10,24 @@
 	border-bottom: solid 3px #e5e6e6;
 }
 
-.tile-medium:hover {
+.tile-large:hover {
     display: inline-block;
     background-color: #83ccc5;
     transition-duration: 0.3s;
 }
 
-.tile-medium-hover{
+.tile-large-hover{
 	margin-top: 110px;
     display: none;
 	width: 100%;
 }
 
-.tile-medium:hover .tile-medium-hover{
+.tile-large:hover .tile-large-hover{
 	text-align: center;
 	display: inline-block;
 }
 
-.tile-medium-hover button{
+.tile-large-hover button{
 	margin: 5px;
 	border: none;
     border-radius: 5px;
@@ -36,7 +36,7 @@
 	background: url(./images/eye.png);
 }
 
-.tile-medium-hover span{
+.tile-large-hover span{
 	display: block;
     text-align: center;
 	font-family: 'Open Sans', sans-serif;
@@ -46,6 +46,6 @@
     top: 60px;
 }
 
-/*.tile-medium:nth-child(2n+2){
+/*.tile-large:nth-child(2n+2){
 	margin-right: 0;
 }*/
