Top-bar portfolio connect

--- a/src/components/breadcrumbs-navigation/breadcrumbs-navigation.css
+++ b/src/components/breadcrumbs-navigation/breadcrumbs-navigation.css
@@ -4,7 +4,6 @@ ul.breadcrumb-navigation {
     font-size: 17px;
     color: #7f8c8c;
     font-family: 'Open Sans Semibold', sans-serif;
-    ;
 }
 
 ul.breadcrumb-navigation li {
@@ -18,11 +17,11 @@ ul.breadcrumb-navigation li+li:before {
 }
 
 ul.breadcrumb-navigation li a {
-    color: #0275d8;
+    color: #7f8c8c;
     text-decoration: none;
 }
 
 ul.breadcrumb-navigation li a:hover {
-    color: #01447e;
+    color: #5d6666;
     text-decoration: underline;
 }
