edd top-bar  background-image

--- a/src/components/top-bar/top-bar.css
+++ b/src/components/top-bar/top-bar.css
@@ -4,5 +4,5 @@
     height: 80px;
     width: 100%;
     position: relative;
-    background-image: url(./top-bar.png) no-repeat;
+    background-image: url(./bg-portgolio.png) no-repeat;
 }
