--- a/src/components/link-external/link-external.css
+++ b/src/components/link-external/link-external.css
@@ -6,7 +6,7 @@ a.link-external {
 	padding-left: 58px;
 	padding-top: 7px;
 	line-height: 24px;
-	text-decoration: underline;
+	text-decoration: none;
 	margin-bottom: 20px;
 	height: 40px;
 	width: auto;
