--- a/src/components/pagination-menu/pagination-menu.css
+++ b/src/components/pagination-menu/pagination-menu.css
@@ -51,3 +51,7 @@
 	background-repeat: no-repeat;
 	background-position: 0 0;
 }
+
+.pagination .prev:hover, .pagination .next:hover {
+	background-color: #e5655d;
+}
