--- a/src/components/top-bar/top-bar.css
+++ b/src/components/top-bar/top-bar.css
@@ -1,8 +1,14 @@
 .top-bar {
-    background-color: #ececec;
-    overflow: hidden;
-    height: 80px;
-    width: 100%;
-    position: relative;
-    background-image: url(./bg-portgolio.png) no-repeat;
+	background-color: #ececec;
+	overflow: hidden;
+	height: 93px;
+	width: 100%;
+	position: relative;
+	background: url(./bg-portgolio.png) no-repeat 0 0, url(./top-bar.png) no-repeat 163px 167px;
+}
+
+.breadcrumbs {
+	position: absolute;
+	right: 167px;
+	top: 37px;
 }
