--- a/src/components/tile-small/tile-small.css
+++ b/src/components/tile-small/tile-small.css
@@ -9,6 +9,7 @@
 	text-align: center;
 	border-bottom: solid 3px #e5e6e6;
 	font-size: 0;
+	z-index: 0;
 }
 
 .tile-small:hover {
@@ -18,6 +19,7 @@
 }
 
 .tile-small-hover {
+	z-index: 1;
 	margin-top: 110px;
 	display: none;
 	width: 100%;
