--- a/src/components/tag-item/tag-item.css
+++ b/src/components/tag-item/tag-item.css
@@ -18,15 +18,18 @@
 	color: #ffffff;
 	padding-left: 11px;
 	padding-right: 11px;
-	padding-bottom: 8px;
-    padding-top: 8px;
+	padding-bottom: 6px;
+    padding-top: 6px;
 }
 
-.mainmenu a:hover {
+.mainmenu .logo a:hover {
 	color: #ffffff;
 	background: #e8645a;
 	border-bottom: 3px solid #e2534b;
 	border-radius: 4px;
+}
+.mainmenu a:hover {
+	color: #ffffff;
 }
 
 .mainmenu .itemmenu:nth-child(5) {
