--- a/src/components/top-bar/top-bar.css
+++ b/src/components/top-bar/top-bar.css
@@ -10,5 +10,10 @@
 .breadcrumbs {
 	position: absolute;
 	right: 167px;
-	line-height: 93px;
+	top: 0;
+}
+
+.naiming {
+	margin-left: 175px;
+	margin-top: 25px;
 }
