did z-index in header

--- a/src/components/page-header/page-header.css
+++ b/src/components/page-header/page-header.css
@@ -5,6 +5,7 @@
 	background-image: url(./bg-header.png);
 	background-repeat: repeat-x;
 	background-color: #76c7c0;
+	z-index: 1;
 }
 
 .header-logo {
