--- a/src/components/tile-small/tile-small.css
+++ b/src/components/tile-small/tile-small.css
@@ -4,7 +4,7 @@
 	vertical-align: top;
 	width: 270px;
 	height: 270px;
-	border-radius: 6px;
+	border-radius: 10px;
 	margin: 0 27px 37px 0;
 	text-align: center;
 	border-bottom: solid 3px #e5e6e6;
@@ -31,7 +31,9 @@
 }
 
 .tile-small-hover button {
-	margin: 5px;
+	padding: 0;
+	margin: 10px;
+	margin-left: 20px;
 	border: none;
 	border-radius: 5px;
 	height: 40px;
