update small tile

--- a/src/components/tile-small/tile-small.css
+++ b/src/components/tile-small/tile-small.css
@@ -32,8 +32,7 @@
 
 .tile-small-hover button {
 	padding: 0;
-	margin: 10px;
-	margin-left: 20px;
+	margin-right: 10px;
 	border: none;
 	border-radius: 5px;
 	height: 40px;
