--- a/src/components/tile-medium/tile-medium.css
+++ b/src/components/tile-medium/tile-medium.css
@@ -8,6 +8,8 @@
 	margin: 0 27px 37px 0;
 	text-align: center;
 	border-bottom: solid 3px #e5e6e6;
+	font-size: 0;
+	z-index: 0;
 }
 
 .tile-medium:hover {
@@ -17,6 +19,7 @@
 }
 
 .tile-medium-hover {
+	z-index: 1;
 	margin-top: 110px;
 	display: none;
 	width: 100%;
@@ -28,7 +31,8 @@
 }
 
 .tile-medium-hover button {
-	margin: 5px;
+	padding: 0;
+	margin-right: 10px;
 	border: none;
 	border-radius: 5px;
 	height: 40px;
@@ -45,3 +49,7 @@
 	position: relative;
 	top: 60px;
 }
+
+/* .tile-medium:nth-child(3n+3){
+	margin-right: 0;
+} */
