--- a/src/components/tiles-grid/tiles-grid.css
+++ b/src/components/tiles-grid/tiles-grid.css
@@ -1,5 +1,9 @@
 .tiles-grid {
-    padding: 0;
-    margin: 0;
-    width: 1250px;
+	padding: 0;
+	margin: 0;
+	overflow: hidden;
+}
+
+.tiles-grid-content {
+	margin-right: -40px;
 }
