--- a/src/components/list-arrow/list-arrow.css
+++ b/src/components/list-arrow/list-arrow.css
@@ -1,13 +1,13 @@
-.list-cross {
-	line-height: 21px;
+.list-arrow {
+	line-height: 21px;	
 	margin: 20px;
 }
 
-.list-cross .list-cross-ipsum {
+.list-arrow  .list-arrow-ipsum {
 	list-style-type: none;
 }
 
-.fa-close {
+.fa-arrow-right {
     color: #e1524b; /* Цвет иконки */
 	padding-right: 5px;
 }
