--- a/src/styles/common.css
+++ b/src/styles/common.css
@@ -1,1 +1,10 @@
+  /*	PORTFOLIO 	*/
   
+  .tag-item-portfolio {
+  	margin-bottom: 40px;
+  }
+  
+  .pagination-portfolio {
+  	margin-top: 70px;
+  	margin-left: 250px;
+  }
