src="./components/image-content/vestibulum.jpg"

--- a/src/components/image-content/image-content.css
+++ b/src/components/image-content/image-content.css
@@ -1,24 +1,32 @@
 .image-content {
-	position: relative;
+	display: block;
+	position: absolute;
 	height: 270px;
 	width: 570px;
-	border: 3px solid aquamarine;
-	overflow: hidden;
+	border-radius: 6px;
 }
 
-/*.content-image {
-	position: absolute;
-	height: inherit;
-	width: auto;
-	left: 50%;
-	transform: translateX(-50%);
-}*/
-
-.content-image {
-	position: absolute;
+.image-content > .image {
+	position: relative;
 	height: auto;
 	width: inherit;
 	top: 50%;
 	transform: translateY(-50%);
+	border-radius: 6px;
 }
 
+.image-content:hover img {
+	display: none;
+}
+
+
+/* Почему не работает? */
+
+/* . image-content:hover {
+		visibility: hidden;
+	}
+
+	.content-image:hover {
+		visibility: hidden;
+	}
+*/
