Changed the button in the tag-item

--- a/src/components/tag-item/tag-item.css
+++ b/src/components/tag-item/tag-item.css
@@ -1,4 +1,4 @@
-.mainmenu .itemmenu {
+.tag-item .item-menu {
 	margin-right: 20px;
 	font-size: 14px;
 	line-height: 30px;
@@ -8,12 +8,13 @@
 	display: inline-block;
 }
 
-.mainmenu .tagitem {
+.tag-item .tag-design {
 	display: inline-block;
 }
 
-.mainmenu a{
+.tag-item a{
 	list-style: none;
+	display: block;
 	text-decoration: none;
 	color: #ffffff;
 	padding-left: 11px;
@@ -22,14 +23,19 @@
     padding-top: 6px;
 }
 
-.mainmenu a:hover {
+.tag-item a:hover {
 	color: #ffffff;
 	background: #e8645a;
-	border-bottom: 3px solid #e2534b;
 	border-radius: 4px;
+	box-shadow: 0 3px #e2534b;
 }
 
-.mainmenu .itemmenu:nth-child(5) {
+.tag-item .logo {
+    background: #e8645a;
+	border-bottom: 3px solid #e2534b;
+}
+
+.tag-item .item-menu:nth-child(5) {
 	background-color: #62a29e;
 	border-bottom: 3px solid #528b86;
 }
