Bread crumbs only for portfolio(Experiment with class)

--- a/src/components/breadcrumbs-navigation/breadcrumbs-navigation.css
+++ b/src/components/breadcrumbs-navigation/breadcrumbs-navigation.css
@@ -1,4 +1,4 @@
-ul.breadcrumb-navigation {
+ul.br_crumb-nav {
     padding: 10px 16px;
     list-style: none;
     font-size: 17px;
@@ -6,22 +6,22 @@ ul.breadcrumb-navigation {
     font-family: 'Open Sans Semibold', sans-serif;
 }
 
-ul.breadcrumb-navigation li {
+ul.br_crumb-nav li {
     display: inline;
 }
 
-ul.breadcrumb-navigation li+li:before {
+ul.br_crumb-nav li+li:before {
     padding: 8px;
     color: #7f8c8c;
     content: "/\00a0";
 }
 
-ul.breadcrumb-navigation li a {
+ul.br_crumb-nav li a {
     color: #7f8c8c;
     text-decoration: none;
 }
 
-ul.breadcrumb-navigation li a:hover {
+ul.br_crumb-nav li a:hover {
     color: #5d6666;
     text-decoration: underline;
 }
