--- a/src/styles/typography.css
+++ b/src/styles/typography.css
@@ -74,3 +74,9 @@ hr {
     line-height: 3px;
     border: none;
 }
+
+blockquote {
+    border-left: 5px solid #7f8c8c;
+    margin: 1.5em 25px;
+    padding: 0.5em 10px;
+}
