--- a/src/components/blog-post-header/blog-post-header.css
+++ b/src/components/blog-post-header/blog-post-header.css
@@ -28,4 +28,13 @@
 .blog-post-header .datum {
 	margin-left: 100px;
 	margin-top: 10px;
+	margin-right: 5px;
+}
+
+.blog-post-header .icon-category {
+	margin-left: 30px;
+}
+
+.blog-post-header .icon-comments {
+	margin-left: 30px;
 }
