Correct blockquote (padding  25px)

--- a/src/styles/typography.css
+++ b/src/styles/typography.css
@@ -77,6 +77,6 @@ hr {
 
 blockquote {
     border-left: 5px solid #7f8c8c;
-    margin: 1.5em 25px;
-    padding: 0.5em 10px;
+    margin-right: 1.5em 25px;
+    padding: 1.5em 25px;
 }
